@@ -112,7 +112,7 @@ gimp_container_entry_view_iface_init (GimpContainerViewInterface *iface)
   iface->clear_items   = gimp_container_entry_clear_items;
   iface->set_view_size = gimp_container_entry_set_view_size;
 
-  iface->insert_data_free = (GDestroyNotify) g_free;
+  iface->insert_data_free = (GDestroyNotify) gtk_tree_iter_free;
 }
 
 static void
@@ -260,18 +260,16 @@ gimp_container_entry_insert_item (GimpContainerView *view,
                                   gint               index)
 {
   GtkTreeModel *model = gimp_container_entry_get_model (view);
-  GtkTreeIter  *iter;
-
-  iter = g_new0 (GtkTreeIter, 1);
+  GtkTreeIter   iter;
 
   if (index == -1)
-    gtk_list_store_append (GTK_LIST_STORE (model), iter);
+    gtk_list_store_append (GTK_LIST_STORE (model), &iter);
   else
-    gtk_list_store_insert (GTK_LIST_STORE (model), iter, index);
+    gtk_list_store_insert (GTK_LIST_STORE (model), &iter, index);
 
-  gimp_container_entry_set (GIMP_CONTAINER_ENTRY (view), iter, viewable);
+  gimp_container_entry_set (GIMP_CONTAINER_ENTRY (view), &iter, viewable);
 
-  return (gpointer) iter;
+  return gtk_tree_iter_copy (&iter);
 }
 
 static void
